<resources>
    <string name="app_name">ViewApp</string>
    <string name="user_name">Enter your username</string>
    <string name="user_pwd">Your password</string>
    <string name="btn_login">Enter</string>
    <string name="greet">Hi Buddy</string>
    <string name="person_name">Enter your full name</string>
    <string name="email_address">Your email@email.com</string>
    <string name="phone_no">Contact number example: +6013456789</string>
    <string name="date_birth">your DOB eg: 27/8/2000</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="nav_open" />
    <string name="nav_close" />

    <string-array name="state_arrays">
        <item>Melaka</item>
        <item>Selangor</item>
        <item>Johor</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Terengganu</item>
        <item>Kedah</item>
        <item>Perlis</item>
    </string-array>
    <string name="title_activity_get_restapi">GetRESTAPI</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>